<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/L00RootLayout"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvCamera"
        style="@style/L00Text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/l00_picture_take_photo" />

    <View style="@style/L00DivideLine" />

    <TextView
        android:id="@+id/tvAlbum"
        style="@style/L00Text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/l00_picture_from_album" />

    <View style="@style/L00DivideBar" />

    <TextView
        android:id="@+id/tvClose"
        style="@style/L00Text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/l00_text_cancel" />
</LinearLayout>